--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <main>
       <section class="container">
-        <img src="../images/illustration-hero.svg" alt="lady listening music" />
+        <img src="images/illustration-hero.svg" alt="lady listening music" />
         <div class="container-part">
           <h1>Order Summary</h1>
           <p>
@@ -31,7 +31,7 @@
             any device anywhere you like!
           </p>
           <div class="sub-container">
-            <img src="../images/icon-music.svg" alt="" />
+            <img src="images/icon-music.svg" alt="" />
             <div class="sub-sub-container">
               <h2>Annual Plan</h2>
               <a>$59.99/year</a>
