--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
 
@@ -36,20 +36,20 @@
               <h2>Annual Plan</h2>
               <a>$59.99/year</a>
             </div>
-            <a class="change" href="">Change</a>
+            <a class="change" href="#">Change</a>
           </div>
           <div class="buttons">
-            <a class="button1" href="">Proceed to Payment</a>
-            <a class="button2" href="">Cancel Order</a>
+            <a class="button1" href="#">Proceed to Payment</a>
+            <a class="button2" href="#">Cancel Order</a>
           </div>
         </div>
       </section>
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Dennis Rumanek</a>.
-      </div>
+      </div> -->
     </main>
   </body>
 </html>
